ingress/ingress-banking.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: banking-ingress
  namespace: banking

spec:
  rules:
  - host: www.banky.com
    http:
      paths:

      
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8000

      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
